WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278656
Regression(
281966@main
) Crash under WebPageProxy::didChooseFilesForOpenPanelWithDisplayStringAndIcon()
https://bugs.webkit.org/show_bug.cgi?id=278656
Summary
Regression(281966@main) Crash under WebPageProxy::didChooseFilesForOpenPanelW...
Chris Dumez
Reported
2024-08-26 08:55:51 PDT
Crash under WebPageProxy::didChooseFilesForOpenPanelWithDisplayStringAndIcon() since
281966@main
: ``` 6 WTF::RefPtr<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>::operator bool() const 6 WTF::WeakPtr<WebKit::WebProcessProxy, WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>>::get() const 6 WebKit::WebOpenPanelResultListenerProxy::process() const 6 WebKit::WebPageProxy::didChooseFilesForOpenPanelWithDisplayStringAndIcon(WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WTF::String const&, API::Data const*)::$_0::operator()() 6 WTF::CompletionHandler<void (IPC::Decoder*)> IPC::Connection::makeAsyncReplyCompletionHandler<Messages::NetworkProcess::AllowFilesAccessFromWebProcess, WebKit::WebPageProxy::didChooseFilesForOpenPanelWithDisplayStringAndIcon(WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WTF::String const&, API::Data const*)::$_0>(WebKit::WebPageProxy::didChooseFilesForOpenPanelWithDisplayStringAndIcon(WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WTF::String const&, API::Data const*)::$_0&&, WTF::ThreadLikeAssertion)::'lambda'(IPC::Decoder*)::operator()(IPC::Decoder*) ==> 6 WTF::Detail::CallableWrapper<WTF::CompletionHandler<void (IPC::Decoder*)> IPC::Connection::makeAsyncReplyCompletionHandler<Messages::NetworkProcess::AllowFilesAccessFromWebProcess, WebKit::WebPageProxy::didChooseFilesForOpenPanelWithDisplayStringAndIcon(WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WTF::String const&, API::Data const*)::$_0>(WebKit::WebPageProxy::didChooseFilesForOpenPanelWithDisplayStringAndIcon(WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WTF::String const&, API::Data const*)::$_0&&, WTF::ThreadLikeAssertion)::'lambda'(IPC::Decoder*), void, IPC::Decoder*>::call(IPC::Decoder*) <== 6 WTF::Function<void (IPC::Decoder*)>::operator()(IPC::Decoder*) const ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-08-26 08:56:00 PDT
<
rdar://134586628
>
Chris Dumez
Comment 2
2024-08-26 08:57:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32710
EWS
Comment 3
2024-08-26 12:15:57 PDT
Committed
282758@main
(6fa76748bda6): <
https://commits.webkit.org/282758@main
> Reviewed commits have been landed. Closing PR #32710 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug