Cherry-pick 282758@main (6fa76748bda6). https://bugs.webkit.org/show_bug.cgi?id=278656

Regression(281966@main) Crash under WebPageProxy::didChooseFilesForOpenPanelWithDisplayStringAndIcon()
    https://bugs.webkit.org/show_bug.cgi?id=278656
    rdar://134586628

    Reviewed by Pascoe.

    Null check m_openPanelResultListener before dereferencing it.

    * Source/WebKit/UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::didChooseFilesForOpenPanelWithDisplayStringAndIcon):
    (WebKit::WebPageProxy::didChooseFilesForOpenPanel):
    (WebKit::WebPageProxy::didCancelForOpenPanel):

    Canonical link: https://commits.webkit.org/282758@main